--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,34 +15,46 @@
 }
 
 body {
-    background: #f5f5f5;
+    background: #fff;
 }
 
 @-webkit-keyframes redPulse {
     from { -webkit-box-shadow: inset 0 0 0 0px #F3755E}
     to { -webkit-box-shadow: inset 0 0 0 10px #F3755E}
 }
+.navbar-default{
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    border:0px solid transparent;
+}
+.navbar-default .navbar-collapse, .navbar-default .navbar-form{
+    border: 0px solid transparent;
+}
 
-
-
-@media (min-width: 660px)
+@media (min-width: 768px)
 {
 
     .stuck {
-        width: 735px;
+
         left: auto;
         right: auto;
         padding-left: 0;
         padding-right: 0;
-    }
-
-    .stuck {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        padding-left: 10px;
-        padding-right: 10px;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        opacity:1;
     }
+
+
 
 }
